# specs-ggez-showcase

./: .gitignore  .rustfmt.toml  Cargo.toml  build.rs
resources/: attack-marked.json  idle-marked.json  jump-marked.json  jumpa-marked.json  run-marked.json  slide-marked.json
resources/level/graveyard/: level_ground-marked.json  level_objects-marked.json
src/: asset_storage.rs  camera.rs  components.rs  game.rs  main.rs  resources.rs  systems.rs  util.rs
src/level/: index.rs  loaded.rs  mod.rs  terrain.rs
src/marker/: geom.rs  mod.rs
src/physics/: aabb.rs  components.rs  mod.rs  moving_object.rs  quad_tree.rs  systems.rs
src/player/: animation_defs.rs  animation_loader.rs  components.rs  consts.rs  mod.rs  state.rs  state_machine.rs  systems.rs
src/rendering/: animation_seq.rs  asset_storage.rs  camera.rs  mod.rs
src/sprite/: animation.rs  mod.rs
