[package]
name = "special"
version = "0.1.0"
authors = ["Dmitriy Pogretskiy <dpogretskiy@gmail.com>"]
build = "build.rs"

[dependencies]
rand = "0.3"
serde = "*"
serde_json = "*"
serde_derive = "*"
nalgebra = "0.13"
specs = "*"
specs-derive = "*"
rayon = "0.7.1"

pushdown-automaton-macro = "*"

[dependencies.ggez]
git = "https://github.com/ggez/ggez.git"
features = ["cargo-resource-root"]

[profile.release]
codegen-units = 1

[features]
cargo-resource-root = []
